@@ -1,3 +1,8 @@
+Fri Nov 24 13:05:01 UTC 2006  Olli Savia  <ops@iki.fi>
+
+        * tests/OS_Test.cpp:
+          Added ACE_OS::snprintf test.
+
 Fri Nov 24 10:08:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Sock_Connect.cpp:
